# cl-chatroom-backend

./: .dockerignore  .gitignore  Dockerfile  Justfile  README.md  pyproject.toml
docs/: README.md  process.md
src/chat/: chatroom_client.py  chatroom_server.py
tests/: test_chatroom_server.py
