[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "chat"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "python-socketio==5.13.*",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.*",
    "pytest==8.4.*",
    "httpx>=0.28.1",
    "pdbpp>=0.11.7",
]
client = [
    "aiohttp>=3.12.15",
    "requests>=2.32.5",
]
